--- a/mystyles.css
+++ b/mystyles.css
@@ -3,6 +3,7 @@ body {
   line-height: 1.5;
 
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-align:center;
 }
 
 p {
